@@ -4,6 +4,7 @@ use strict;
 use Perl::Build;
 use FindBin '$Bin';
 perl_build (
-pod => ["lib/Image/SVG/Path.pod"],
+#pod => ["lib/Image/SVG/Path.pod"],
+make_pod => "$Bin/make-pod.pl",
 );
 
