@@ -1,12 +1,29 @@
 [% start_year=2011 %]
+[% MACRO example(file) BLOCK %]
+[%- pl =  file _ ".pl" -%]
+[%- out = file _ "-out.txt" -%]
+[% INCLUDE $pl | xtidy %]
+
+produces output
+
+[% INCLUDE $out | xtidy %]
+
+(This example is included as L<F<[% pl %]>|https://api.metacpan.org/source/BKB/Image-SVG-Path-[% version %]/examples/[% pl %]> in the distribution.)
+[% END %]
+=encoding UTF-8
+
 =head1 NAME
 
 Image::SVG::Path - read the "d" attribute of an SVG path
 
 =head1 SYNOPSIS
 
-    use Image::SVG::Path 'extract_path_info';
-    my @path_info = extract_path_info ($path_d_attribute);
+[% INCLUDE "synopsis.pl" | xtidy %]
+
+=head1 VERSION
+
+This documents version [% version %] of Image::SVG::Path corresponding to git
+commit [% commit.commit %] released on [% commit.date %].
 
 =head1 DESCRIPTION
 
@@ -19,22 +36,7 @@ For example, an SVG <path> element might take the form
 
 Using an XML parser, such as L<XML::Parser>,
 
-    use XML::Parser;
-    use Image::SVG::Path 'extract_path_info';
-    my $p = XML::Parser->new (Handlers => {Start => \& start});
-    $p->parsefile ($file)
-        or die "Error $file: ";
-
-    sub start
-    {
-        my ($expat, $element, %attr) = @_;
-
-        if ($element eq 'path') {
-            my $d = $attr{d};
-            my @r = extract_path_info ($d);
-            # Do something with path info in @r
-        }
-    }
+[% example("xml-parser") %]
 
 SVG means "scalable vector graphics" and it is a standard of the W3
 consortium. See L</SVG standards> for details.  Although SVG is a type
@@ -50,65 +52,7 @@ parser for that condensed format.
 
 Turn the SVG path string into a series of simpler things. For example,
 
-    my @path_info = extract_path_info ('M6.93,103.36c3.61-2.46,6.65-6.21,6.65-13.29c0-1.68-1.36-3.03-3.03-3.03s-3.03,1.36-3.03,3.03s1.36,3.03,3.03,3.03C15.17,93.1,10.4,100.18,6.93,103.36z');
-
-    my $count = 0;
-    for my $element (@path_info) {                
-        $count++;                                 
-        print "Element $count:\n";                
-        for my $k (keys %$element) {              
-            my $val = $element->{$k};             
-            if (ref $val eq 'ARRAY') {            
-                $val = "[$val->[0], $val->[1]]";  
-            }                                     
-            print "   $k -> $val\n";              
-        }                                         
-    }
-
-This prints out
-  
-    Element 1:                         
-       point -> [6.93, 103.36]         
-       svg_key -> M                    
-       position -> absolute            
-       type -> moveto                  
-    Element 2:                         
-       control1 -> [3.61, -2.46]       
-       svg_key -> c                    
-       control2 -> [6.65, -6.21]       
-       position -> relative            
-       type -> cubic-bezier            
-       end -> [6.65, -13.29]           
-    Element 3:                         
-       control1 -> [0, -1.68]          
-       svg_key -> c                    
-       control2 -> [-1.36, -3.03]      
-       position -> relative            
-       type -> cubic-bezier            
-       end -> [-3.03, -3.03]           
-    Element 4:                         
-       svg_key -> s                    
-       control2 -> [-3.03, 1.36]       
-       position -> relative            
-       type -> shortcut-cubic-bezier   
-       end -> [-3.03, 3.03]            
-    Element 5:                         
-       svg_key -> s                    
-       control2 -> [1.36, 3.03]        
-       position -> relative            
-       type -> shortcut-cubic-bezier   
-       end -> [3.03, 3.03]             
-    Element 6:                         
-       control1 -> [15.17, 93.1]       
-       svg_key -> C                    
-       control2 -> [10.4, 100.18]      
-       position -> absolute            
-       type -> cubic-bezier            
-       end -> [6.93, 103.36]
-    Element 7:
-       svg_key -> z
-       position -> relative
-       type -> closepath
+[% example ("extract-path-info") %]
 
 The return value is a list of hash references. Each hash reference has
 at least three keys, C<type>, C<position>, and C<svg_key>. The C<type>
@@ -178,11 +122,11 @@ informative messages about what it is doing as it parses the path.
 
 Make an SVG path which is the exact reverse of the input.
 
-=head3 Bugs
-
 This only works for cubic bezier curves with absolute position and no
 shortcuts (C elements only). It doesn't fill in all the information
 correctly.
+
+[% example("test-reverse") %]
 
 =head2 create_path_string
 
@@ -191,28 +135,27 @@ correctly.
 Given a set of information as created by L</extract_path_info>, turn
 them into an SVG string representing a path.
 
-=head3 Bugs
-
 This only works for cubic bezier curves and the initial moveto element
 for absolute position and no shortcuts (C elements only).
 
 =head1 SVG path elements
 
-This section documents the output elements. For example, if we extract
-the path information from a path C<$d> using
+This section documents the output elements. If the path is extracted
+using
 
     my @path = extract_path_info ($d);
 
-then each element of C<@path> is a hash reference containing one of
-the following types of elements and the corresponding hash keys.
-
-An SVG path consists of a sequence of movements from one point to
-another, so each of the following steps in the path begins from the
-end point of the previous movement.
+then the elements of C<@path> are each hash references which contain
+one of the following kinds of elements, depending on what is next on
+the path. 
 
 =head2 Move to elements
 
 =over
+
+=item type
+
+This is C<moveto>.
 
 =item svg_key
 
@@ -227,6 +170,10 @@ This is the point to move to.
 =head2 Line elements
 
 =over
+
+=item type
+
+This is C<lineto>.
 
 =item svg_key
 
@@ -246,6 +193,10 @@ pre-0.16 versions of the module.
 =head2 Cubic bezier curve elements
 
 =over
+
+=item type
+
+This is C<cubic-bezier>.
 
 =item svg_key
 
@@ -272,6 +223,10 @@ cubic bezier curve elements.
 
 =over
 
+=item type
+
+This is C<shortcut-cubic-bezier>.
+
 =item svg_key
 
 This is S or s.
@@ -289,6 +244,10 @@ This is the end point of the curve.
 =head2 Quadratic bezier curve elements
 
 =over
+
+=item type
+
+This is C<quadratic-bezier>.
 
 =item svg_key
 
@@ -311,6 +270,10 @@ quadratic bezier curves.
 
 =over
 
+=item type
+
+This is C<shortcut-quadratic-bezier>.
+
 =item svg_key
 
 This is T or t.
@@ -323,9 +286,11 @@ This is the end point.
 
 =head2 Arc elements
 
-Arcs are omitted from L</SVG Tiny>.
-
 =over
+
+=item type
+
+This is C<arc>.
 
 =item rx, ry
 
@@ -333,15 +298,15 @@ X and Y radiuses
 
 =item x_axis_rotation
 
-See the SVG documentation for details.
+See L<the SVG documentation|/SVG specification> for details.
 
 =item large_arc_flag
 
-See the SVG documentation for details.
+See L<the SVG documentation|/SVG specification> for details.
 
 =item sweep_flag
 
-See the SVG documentation for details.
+See L<the SVG documentation|/SVG specification> for details.
 
 =item x, y
 
@@ -349,9 +314,15 @@ These are the end points of the arc.
 
 =back
 
+Arcs are omitted from L</SVG Tiny>.
+
 =head2 Horizontal line elements
 
 =over
+
+=item type
+
+This is C<horizontal-line-to>.
 
 =item svg_key
 
@@ -367,6 +338,10 @@ This is the x coordinate of the end point. The y coordinate is implicit.
 
 =over
 
+=item type
+
+This is C<vertical-line-to>.
+
 =item svg_key
 
 This is V or v.
@@ -376,6 +351,26 @@ This is V or v.
 This is the y coordinate of the end point. The x coordinate is implicit.
 
 =back
+
+=head2 Closepath elements
+
+=over
+
+=item type
+
+This is C<closepath>.
+
+=item svg_key
+
+This is Z or z.
+
+=back
+
+Each hash reference also contains the field C<position>, which has
+either the value C<absolute> or C<relative> depending on whether
+C<svg_key> is upper case or lower case, respectively. A field C<name>
+also exists. However, these fields and C<type> are rather useless. See
+L</Some of the path element data is redundant>.
 
 =head1 BUGS
 
@@ -388,49 +383,86 @@ L<http://www.w3.org/TR/SVG/paths.html#PathDataBNF>. However, this
 module does not use that grammar. Instead it hacks up the path using
 regexes.
 
+=item Some of the path element data is redundant
+
+Some of the data fields of the hash elements shown under L</SVG path
+elements> are redundant. A future major re-version of the module may
+remove some of these. I suggest using the C<svg_key> field rather than
+the C<name>, C<type> and C<position> fields.
+
 =back
 
 =head1 EXPORTS
 
-The module exports L</extract_path_info> on demand, so 
+None of the functions is exported by default.
 
-     use Image::SVG::Path 'extract_path_info';
+     use Image::SVG::Path ':all';
 
-imports it.
+exports all of L</extract_path_info>, L</reverse_path> and
+L</create_path_string>.
 
 =head1 SEE ALSO
 
-L<SVG::Rasterize>
+=head2 Other CPAN modules
+
+=over
+
+=item L<SVG::Rasterize>
 
 This contains a complete parser for SVG paths in
 C<SVG::Rasterize::Engine::PangoCairo>. It is embedded into the module
 and is used to draw with L<Cairo>.
 
-L<MarpaX::Languages::SVG::Parser>
+=item L<MarpaX::Languages::SVG::Parser>
 
 This parser uses the SVG grammar mentioned in L</BUGS>.
 
+=item L<SVG::Estimate>
+
+This is an application of Image::SVG::Path which uses it to estimate
+the lengths of the paths of SVG images.
+
+=item L<Image::CairoSVG>
+
+This is a least-effort module by the same author as Image::SVG::Path
+which renders some kinds of SVGs using L<Cairo>.
+
+=item L<Image::LibRSVG>
+
+Render SVG via a Gnome library.
+
+=back
+
 =head2 SVG standards
+
+=over
+
+=item SVG specification
 
 L<The full specification|http://www.w3.org/TR/SVG/> contains all the
 details. The L<SVG path
 specification|http://www.w3.org/TR/SVG/paths.html> contains the
 specifications for paths.
 
-=head3 SVG Tiny
+=item SVG Tiny
 
 L<SVG Tiny|http://www.w3.org/TR/SVGTiny12/index.html> is a subset of
 SVG. It claims to have a L<Perl Language
 Binding|http://www.w3.org/TR/SVGTiny12/perl-binding.html>, but I
 cannot locate the source code.
 
+=item SVG basic
+
 There is also another standard, SVG basic, I'm not too sure whether
 either this or SVG Tiny are in use.
+
+=back
 
 =head1 ACKNOWLEDGEMENTS
 
 Colin Kuskie (L<http://www.perldreamer.com/>) fixed error messages for
-version 0.20, number paths for version 0.21, and implicit line-tos for
-version 0.22.
+version 0.20, number paths for version 0.21, implicit line-tos for
+version 0.22, implicit arc commands for version 0.23, and multiple
+closepaths for version 0.24.
 
 [% INCLUDE "author" %]
