@@ -3,6 +3,7 @@ Revision history for perl module Image::SVG::Path
 0.24 2016-09-12
 
 * Handle multiple closepath (z) commands in sequence
+* Document the "type" field of the return values.
 
 0.23 2016-08-10
 
